# PQCrypto-SIDH

./: .gitignore  CMakeLists.txt  README.md  README_WDI.md  build.gradle  run_all_tests.sh  settings.gradle
AndroidSidh/: CMakeLists.txt  build.gradle
AndroidSidh/src/main/: AndroidManifest.xml
AndroidSidhLib/: .gitignore  CMakeLists.txt  build.gradle
AndroidSidhTest/: build.gradle
AndroidSidhTest/src/androidTest/java/wdi/androidsidhtest/: ExampleInstrumentedTest.kt
AndroidSidhTest/src/main/: AndroidManifest.xml
AndroidSidhTest/src/main/java/wdi/androidsidhtest/: MainActivity.kt  SidhCallback.kt
AndroidSidhTest/src/main/res/layout/: activity_main.xml
AndroidSidhTest/src/main/res/values/: strings.xml
AndroidSidhTest/src/test/java/wdi/androidsidhtest/: DiffieHellmanTest.kt  ExampleUnitTest.kt  FieldLengthsTest.kt
P434/: CMakeLists.txt
P503/: CMakeLists.txt
P610/: CMakeLists.txt
P751/: CMakeLists.txt
android-sidh/: CMakeLists.txt  build.gradle
cpp/: SidhP434Wrapper.cpp  SidhP503Wrapper.cpp  SidhP610Wrapper.cpp  SidhP751Wrapper.cpp  SidhWrapper.cpp  SidhWrapper.h
cpp/javaNative/: SidhNative.cpp  SidhNative.java  SidhNativeTests.java  sidh_SidhNative.h  sidh_SidhNative_FieldLengths.h  sidh_tests_SidhNativeTests.h  sidhjava_SidhNative.h  sidhjava_SidhNative_FieldLengths.h  sidhjava_test_SidhNativeTests.h
cpp/javaNative/sidhjava/: SidhNative.java
cpp/javaNative/sidhjava/test/: SidhNativeTests.java
gradle/wrapper/: gradle-wrapper.properties
src/: ec_isogeny.c  fpx.c  internal.h
src/P434/: P434.c  P434_compressed.c  P434_internal.h
src/P434/generic/: fp_generic.c
src/P503/: P503.c  P503_compressed.c  P503_internal.h
src/P503/generic/: fp_generic.c
src/P610/: P610.c  P610_compressed.c  P610_internal.h
src/P610/generic/: fp_generic.c
src/P751/: P751.c  P751_compressed.c  P751_internal.h
src/P751/generic/: fp_generic.c
src/common/: common_funcs.c  common_funcs.h
testsEmbedded/: arith_tests-p434.c  arith_tests-p503.c  arith_tests-p610.c  arith_tests-p751.c  embeddedTests.h  test_SIDHp434.c  test_SIDHp503.c  test_SIDHp610.c  test_SIDHp751.c  test_sidh.c
unittests/: CMakeLists.txt  SidhBasic434_test.cpp  SidhBasic503_test.cpp  SidhBasic610_test.cpp  SidhBasic751_test.cpp
